# geakg

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALLATION.md  README.md  pyproject.toml
data/: generate_tsp_instances.py
data/techniques/: techniques_tsp.json
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md
scripts/: analyze_nas_structure.py  clean_snapshot_for_large.py  compute_statistical_tests.py  exp_llamea_multi_instance.py  exp_llamea_tsp.py  gen_diverse_akg.py  generate_case_study1_figures.py  generate_executive_summary.py  generate_kg_analysis_figures.py  generate_l0_pool.py  generate_tsp_instances.py  initialize_akg.py  migrate_snapshots.py  normalize_pheromones.py  parse_jssp_instances.py  run_experiments.py  run_iterative_refinement.py  run_jssp_transfer.py  run_l0_pipeline.py  run_llamea_tsp.py  run_lop_transfer.py  run_nas_bench_symbolic.py  run_nas_benchmark.py  run_nas_experiment.py  run_nas_graph_benchmark.py  run_nas_symbolic.py  run_pfsp_transfer.py  run_qap_transfer.py  run_symbolic_tsp.py  run_vrp_transfer.py  run_with_pool.py  train.py  transfer_experiment.py  verify_setup.py  visualize_llm_akg.py
src/: __init__.py
src/baselines/: __init__.py  genetic_programming.py  jssp_genetic_programming.py  jssp_gp_30ops.py  llamea_wrapper.py
src/constraints/: __init__.py  feedback.py  mask_generator.py  validator.py
src/domains/: __init__.py  base.py  binpacking.py  jssp.py  lop.py  pfsp.py  qap.py  sop.py  tsp.py  vrp.py
src/evolution/: __init__.py  engine.py  fitness.py  population.py
src/geakg/: __init__.py  aco.py  bindings.py  conditions.py  context.py  execution.py  generator.py  graph.py  instance_pool.py  meta_graph.py  nodes.py  ontology.py  persistence.py  persistence_templates.py  representations.py  roles.py  safe_exec.py  visualization.py
src/llm/: __init__.py  client.py  config.py  parser.py  prompts.py
src/operators/: __init__.py  base.py  construction.py  local_search.py  meta_heuristic.py  perturbation.py  registry.py
src/prompts/: __init__.py
src/retrieval/: __init__.py  context_builder.py  lookup.py
src/utils/: __init__.py  logging.py
tests/: test_aco.py  test_akg_levels_integration.py  test_bindings.py  test_bpp_operators.py  test_generality.py  test_genetic_programming.py  test_jssp_gp_30ops.py  test_jssp_operators.py  test_level1_topology.py  test_level2_weights.py  test_level3_conditions.py  test_nas_context.py  test_nas_graph.py  test_operators.py  test_registry.py  test_role_schema.py  test_roles.py  test_vrp_operators.py
(+212 files in other folders)
