[project]
name = "geakg"
version = "0.1.0"
description = "Generative Executable Algorithm Knowledge Graphs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@domain.com"}
]
keywords = [
    "algorithmic-knowledge-graph",
    "neuro-symbolic-ai",
    "automated-algorithm-design",
    "large-language-models",
    "evolutionary-computation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "networkx>=3.2",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    # LLM (Ollama local)
    "ollama>=0.4",
    "openai>=1.3",     # Para wrapper LLaMEA (Ollama expone API compatible)
    # Validación y config
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    # Baselines
    "llamea>=1.1.10",  # LLaMEA oficial (Humies 2025 Silver)
    "deap>=1.4",       # Para GP baseline
    "python-tsp>=0.2.0",
    "nas-bench-graph>=1.4.0",
    "scikit-optimize>=0.10",  # BO baseline for NAS
]

[project.optional-dependencies]
nas-bench = [
    "nats_bench>=1.8",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.92",
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.6",
]

[project.scripts]
ns-gge = "ns_gge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=src --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
